# practica1_iaa

practica1/: CMakeLists.txt  codigo  codigo.cc  data.h
practica1/src/: codigo.cc  data.cc  data.h
